--- a/wg_dashboard_frontend/src/app/layouts/common-layout/common-layout.component.html
+++ b/wg_dashboard_frontend/src/app/layouts/common-layout/common-layout.component.html
@@ -26,28 +26,28 @@
 
 
 
-      <div class="avatar-dropdown" id="icon">
-        <span>Logged in as Admin</span>
+      <div class="avatar-dropdown" id="icon" *ngIf="auth.user">
+        <span>Logged in as {{auth.user?.username}}</span>
         <!--<img src="assets/images/Icon_header.png">-->
       </div>
-      <!--<ul
+      <ul
         class="mdl-menu mdl-list mdl-menu--bottom-right mdl-js-menu mdl-js-ripple-effect mdl-shadow--2dp account-dropdown"
         for="icon">
         <li class="mdl-list__item mdl-list__item--two-line">
             <span class="mdl-list__item-primary-content">
               <span class="material-icons mdl-list__item-avatar"></span>
-              <span>{{ user.username }}</span>
-              <span class="mdl-list__item-sub-title">{{ user.email }}</span>
+              <span>{{ auth.user?.username }}</span>
+              <span class="mdl-list__item-sub-title">{{ auth.user?.email }}</span>
           </span>
         </li>
         <li class="list__item--border-top"></li>
         <li class="mdl-menu__item mdl-list__item">
-            <span class="mdl-list__item-primary-content">
+            <span class="mdl-list__item-primary-content" (click)="router.navigate(['/user/edit'])">
               <i class="material-icons mdl-list__item-icon">account_circle</i>
               My account
             </span>
         </li>
-        <li class="mdl-menu__item mdl-list__item">
+        <!--<li class="mdl-menu__item mdl-list__item">
             <span class="mdl-list__item-primary-content">
               <i class="material-icons mdl-list__item-icon">check_box</i>
               My tasks
@@ -61,21 +61,21 @@
               <i class="material-icons mdl-list__item-icon">perm_contact_calendar</i>
               My events
             </span>
-        </li>
-        <li class="list__item--border-top"></li>
+        </li>-->
+        <!--<li class="list__item--border-top"></li>
         <li class="mdl-menu__item mdl-list__item">
             <span class="mdl-list__item-primary-content">
               <i class="material-icons mdl-list__item-icon">settings</i>
               Settings
             </span>
-        </li>
+        </li>-->
         <li class="mdl-menu__item mdl-list__item">
             <span class="mdl-list__item-primary-content" (click)="logout()">
               <i class="material-icons mdl-list__item-icon text-color--secondary">exit_to_app</i>
               Log out
             </span>
         </li>
-      </ul>-->
+      </ul>
 
     </base-page-top>
   </div>
