--- a/wg_dashboard_frontend/src/app/page/dashboard/server/server.component.html
+++ b/wg_dashboard_frontend/src/app/page/dashboard/server/server.component.html
@@ -110,7 +110,7 @@
                 <!-- Edit buttons -->
                 <app-modal-confirm
                   [noConfirm]="true"
-                  (onConfirm)="this.editPeerEmitter.emit({type: 'edit', peer: peer}); selectedPeer=peer"
+                  (onConfirm)="selectedPeer=peer; this.editPeerEmitter.emit({type: 'edit', peer: peer}); $event.stopPropagation();"
                   icon="edit"
                   hover="Edit {{peer.name}}">
                 </app-modal-confirm>
@@ -127,6 +127,7 @@
 
 
               </td>
+              LOL {{peer !== selectedPeer}}
             </tr>
             <tr [hidden]="peer !== selectedPeer">
               <td colspan="6">
