* Added Default DNS * Removed old code
* BREAKING CHANGES:
Create COLUMN dns on server table if you have running setup

--- a/wg_dashboard_frontend/src/app/page/dashboard/add-server/add-server.component.html
+++ b/wg_dashboard_frontend/src/app/page/dashboard/add-server/add-server.component.html
@@ -50,6 +50,15 @@
         </td>
       </tr></table>
 
+      <table class="add-server-full-width" cellspacing="0"><tr>
+        <td>
+          <mat-form-field class="add-server-full-width">
+            <mat-label>Default DNS</mat-label>
+            <input formControlName="dns" matInput placeholder="8.8.8.8">
+          </mat-form-field>
+        </td>
+      </tr></table>
+
       <p><b>Keys</b></p>
       <p>
         <mat-form-field class="add-server-full-width">
