# ADDED 'Download configuration' You can now download configuration files directly as a .conf file for peer and .zip for servers. The server zip contains all peer configurations including the server.conf.

--- a/wg_dashboard_frontend/src/app/page/dashboard/server/server.component.html
+++ b/wg_dashboard_frontend/src/app/page/dashboard/server/server.component.html
@@ -15,6 +15,14 @@
     <mat-card-title class="card-container-right">
 
       <app-modal-confirm
+        [noConfirm]="true"
+        (onConfirm)="downloadServerConfig()"
+        area="true"
+        icon="get_app"
+        hover="Download config zip for {{server.interface}}">
+      </app-modal-confirm>
+
+      <app-modal-confirm
         [qrCode]="true"
         [noConfirm]="false"
         area="true"
@@ -106,6 +114,15 @@
               <td>{{peer._stats?.tx || '0'}}/{{peer._stats?.rx || '0'}}</td>
               <td> {{peer._stats?.handshake || 'N/A'}}</td>
               <td>
+
+                <!-- Download Button -->
+                <app-modal-confirm
+                  [noConfirm]="true"
+                  (onConfirm)="downloadPeerConfig(peer); $event.stopPropagation();"
+                  icon="get_app"
+                  hover="Download configuration for {{peer.name}}">
+                </app-modal-confirm>
+
 
                 <!-- Edit buttons -->
                 <app-modal-confirm
