* Fixes #18 "dark theme slider"

--- a/wg_dashboard_frontend/src/app/layout/layout/layout.component.html
+++ b/wg_dashboard_frontend/src/app/layout/layout/layout.component.html
@@ -36,10 +36,11 @@
         <mat-menu #themeMenu="matMenu">
           <button mat-menu-item *ngFor="let theme of themes" (click)="setCurrentTheme(theme)">{{theme.name}}</button>
           <mat-slide-toggle
-            style="margin-top: 10px;"
+            style="margin-top: 10px; padding: 0 16px;"
             color="primary"
-            (click)="toggleDarkMode($event);"
-            [checked]="darkMode">
+            [(ngModel)]="darkMode"
+            (change)="toggleDarkMode()"
+            (click)="$event.stopPropagation();">
             Dark
           </mat-slide-toggle>
         </mat-menu>
