--- a/wg_dashboard_backend/templates/peer.j2
+++ b/wg_dashboard_backend/templates/peer.j2
@@ -1,5 +1,5 @@
 [Interface]
-Address = {{ data.peer.address }}/{{ data.server.subnet }}
+Address = {{ data.peer.address }}/{{ data.server.subnet }}{%- if is_ipv6 -%},{{ data.peer.v6_address }}/{{ data.server.v6_subnet }}{%- endif %}
 PrivateKey = {{ data.peer.private_key }}
 DNS = {{ data.peer.dns }}
 
