* API-Key support. This ease automation, such as #21

--- a/wg_dashboard_frontend/src/app/page/user/edit/edit.component.html
+++ b/wg_dashboard_frontend/src/app/page/user/edit/edit.component.html
@@ -1,5 +1,5 @@
-<div flex fxFill fxLayout="row" fxLayoutAlign="center center" >
-  <div fxFlex="33">
+<div flex fxFill fxLayout="row" fxLayoutAlign="left top">
+  <div fxFlex="33" class="user-edit-component">
 
     <mat-card>
       <mat-card-title>
@@ -47,6 +47,9 @@
     </mat-card>
   </div>
 
+  <div fxFlex="66" class="user-edit-component">
+    <app-api-key></app-api-key>
+  </div>
 
 
 
