--- a/wg_dashboard_frontend/src/app/page/dashboard/add-server/add-server.component.html
+++ b/wg_dashboard_frontend/src/app/page/dashboard/add-server/add-server.component.html
@@ -107,7 +107,16 @@
             <input formControlName="dns" matInput [placeholder]="defaultIPv4Address">
           </mat-form-field>
         </td>
-      </tr></table>
+      </tr>
+      <tr>
+        <td>
+          <mat-form-field class="add-server-full-width">
+            <mat-label>Default allowed IPs</mat-label>
+            <input formControlName="allowed_ips" matInput [placeholder]="defaultAllowedIPs">
+          </mat-form-field>
+        </td>
+      </tr>
+    </table>
 
       <p><b>Keys</b></p>
       <p>
