Make PersistentKeepalive configurable

--- a/wg_dashboard_frontend/src/app/page/dashboard/add-server/add-server.component.html
+++ b/wg_dashboard_frontend/src/app/page/dashboard/add-server/add-server.component.html
@@ -116,6 +116,14 @@
           </mat-form-field>
         </td>
       </tr>
+      <tr>
+        <td>
+          <mat-form-field class="add-server-full-width">
+            <mat-label>Default PersistentKeepalive interval</mat-label>
+            <input formControlName="keep_alive" matInput [placeholder]="defaultPersistentKeepalive">
+          </mat-form-field>
+        </td>
+      </tr>
     </table>
 
       <p><b>Keys</b></p>
