Some work on interface. default ipv6.

--- a/wg-manager-frontend/src/app/page/dashboard/dashboard.component.html
+++ b/wg-manager-frontend/src/app/page/dashboard/dashboard.component.html
@@ -1,17 +1,19 @@
 <div
-  fxFlexFill
-  fxLayout="row"
+  fxLayout="column"
   fxLayout.lt-lg="column"
+  style="padding: 10px;"
+  fxLayoutGap="20px">
 
-  style="padding: 10px;" fxLayoutGap="20px">
 
-  <div fxFlex="65">
+  <div fxFlex="100">
+    <app-add-server [(servers)]="servers"></app-add-server>
+  </div>
+
+  <div fxFlex="100">
       <app-server [(server)]="servers[idx]" [(servers)]="servers" *ngFor="let server of servers; let idx = index"></app-server>
   </div>
 
-  <div fxFlex="35">
-    <app-add-server [(servers)]="servers"></app-add-server>
-  </div>
+
 
 
 </div>
